# WhiteRabbit

./: README.md
Logger/: CMakeLists.txt  myLogger.cpp  myLogger.hpp  myLogger_ifx.hpp
SandBox/: .gitignore  CMakeLists.txt  CMakePresets.json  OpenVsCode.bat  Run.bat  WhiteRabbitSandbox.code-workspace  build.bat  clean.bat  configure.bat
SandBox/.vscode - kopie/: launch.json  tasks.json
SandBox/include_libs/: myLogger_ifx.hpp  wrTypes.h
SandBox/src/: CMakeLists.txt  main.cpp  wrWindow.cpp  wrWindow.hpp
Used_Libraries/SDL2/include/SDL2/: SDL_revision.h
Used_Libraries/SDL2/lib/: SDL2_test.lib  SDL2main.lib
Used_Libraries/SDL2/lib/pkgconfig/: sdl2.pc
